Added CSS and images.  Will need to use classes.toggle in the JS to hide #iconDeath and #iconCake until death or cake are returned.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body> 
-    <button id="flipButton" type="button" name="button">Flip Coin</button>
-    <h2 id="flipCoin"></h2>
+    <h1>DEATH OR CAKE</h1>
+    <img src="https://cdn.glitch.global/6103ec87-7cd1-4e3e-92fd-0e50a3625728/Logo.png?v=1653974548774">
+    <button id="flipButton" type="button" name="button">Click Here for Cake!</button>
+    <h3 id="iconCake"><img src="https://cdn.glitch.global/6103ec87-7cd1-4e3e-92fd-0e50a3625728/cake.png?v=1653974555323" alt=""></h3><h3 id="iconDeath"><img src="https://cdn.glitch.global/6103ec87-7cd1-4e3e-92fd-0e50a3625728/death.png?v=1653974551838" alt=""></h3><h2 id="flipCoin"></h2><h3 id="iconCake"><img src="https://cdn.glitch.global/6103ec87-7cd1-4e3e-92fd-0e50a3625728/cake.png?v=1653974555323" alt=""></h3><h3 id="iconDeath"><img src="https://cdn.glitch.global/6103ec87-7cd1-4e3e-92fd-0e50a3625728/death.png?v=1653974551838" alt=""></h3>
 
     <script type="text/javascript" src="/js/main.js"></script>
   </body>
